--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "Max Semenov",
   "license": "MIT",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "data:flow": "babel-node dataFlowTransform.js",
+    "flow": "flow; test $? -eq 0 -o $? -eq 2",
+    "test": "mocha --compilers js:babel-core/register './tests/**/*_spec.@(js|jsx)'",
+    "test:watch": "npm test -- --watch"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.4",
@@ -17,9 +21,11 @@
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.2",
+    "babel-plugin-transform-flow-strip-types": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-stage-0": "^6.3.13",
+    "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "cssnano": "^3.7.1",
     "eslint": "^2.13.1",
@@ -28,11 +34,13 @@
     "eslint-plugin-jsx-a11y": "^1.5.5",
     "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
+    "flow-bin": "^0.30.0",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
     "ignore-styles": "^1.2.0",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
+    "mocha": "^3.0.2",
     "postcss": "^5.0.19",
     "postcss-loader": "^0.8.2",
     "style-loader": "^0.13.1",
@@ -40,12 +48,16 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "d3": "^4.0.0-rc.2"
+    "d3": "^4.0.0-rc.2",
+    "lodash": "^4.15.0"
   },
   "babel": {
     "presets": [
       "es2015",
       "stage-0"
+    ],
+    "plugins": [
+      "transform-flow-strip-types"
     ]
   }
 }
